// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SimpleTable Datum 1`] = `
<div
  id="root"
>
  <table
    class="MuiTable-root makeStyles-table-120"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-119 "
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-119 "
          scope="col"
        >
          Status
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-119 "
          scope="col"
        >
          Age
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age0
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age1
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age2
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots SimpleTable Getter 1`] = `
<div
  id="root"
>
  <table
    class="MuiTable-root makeStyles-table-118"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-117 "
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-117 "
          scope="col"
        >
          Status
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-117 "
          scope="col"
        >
          Age
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age0
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age1
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age2
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
